# Claude-playground

./: .gitignore  POIMANDRES_STRATEGIC_REVIEW.md  README.md  quiz.html  soldi-persi.html  veneta-cucine-slide-ai-ml-bi.md
.claude/: settings.local.json
controlla-me/: .dockerignore  .env.local.example  .gitignore  AVVIA_CME.bat  AVVIA_CME_CONTINUO.bat  AVVIA_COMPANY_SCHEDULER.bat  AVVIA_GUI_DAEMON.bat  AVVIA_SCHEDULER.ps1  AVVIA_SITO.bat  CHANGELOG.md  CLAUDE.md  CME_CONSOLE.bat  COMMIT_PROGRESS.ps1  FEATURE_COMPLETE_SUMMARY.md  INTEGRATION_WIZARD_API_KEY.md  INTEGRATION_WIZARD_BEFORE_AFTER.md  INTEGRATION_WIZARD_CHANGES_SUMMARY.md  INTEGRATION_WIZARD_README.md  INTEGRATION_WIZARD_UX_FLOW.md  SETUP_CME_SCHEDULER.ps1  SETUP_PC_NUOVO.bat  SORA-PROMPTS.md  TODO_DOMANI.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  qa.config.json  run-single-test.mjs  test-analysis.ts  test-normattiva.ts  tmp-parse.js  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
controlla-me/app/: HomePageClient.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
controlla-me/company/: NOTIFICATION.md  README.md  cme-daemon-state.json  cme.md  committee-2026-03-03.md  contracts.md  daemon-ping.txt  daemon-report.json  gui-daemon-state.json  latest-scheduler-plan.md  maintenance-schedule.md  ops-alert-state.json  process-designer.md  scheduler-daemon-state.json  state-of-company-2026-03-01.md  state-of-company-2026-03-03.md  state-of-company-2026-03-07.md  state-of-company-2026-03-08.md  state-of-company-2026-03-09.md  state-of-company-2026-03-14.md  state-of-company-2026-03-15.md  state-of-company-2026-03-18.md  state-of-company-2026-03-20.md  task-runner-log.md  vision-scanner-created.json  vision.json
controlla-me/components/: AnalysisProgress.tsx  CTASection.tsx  CorpusChat.tsx  DeepSearchChat.tsx  DocumentChat.tsx  FairnessScore.tsx  FeedbackWidget.tsx  Footer.tsx  HeroSection.tsx  LawyerCTA.tsx  LegalBreadcrumb.tsx  MissionSection.tsx  Navbar.tsx  PaywallBanner.tsx  PushNotificationToggle.tsx  ResultsView.tsx  RiskCard.tsx  ServiceWorkerRegistration.tsx  TeamSection.tsx  TestimonialsSection.tsx  UploadZone.tsx  UseCasesSection.tsx  VideoShowcase.tsx
controlla-me/connectors/: normattiva-opendata.ts  normattiva.ts  registry.json  template.ts
controlla-me/corpus-configs/: legal.json  legal.qa-report.json
controlla-me/deploy/: .env.production.example  MIGRATION.md  docker-compose.yml
controlla-me/docs/: ADR-001-pmi-tier.md  ARCHITECTURE.md  BEAUTY-REPORT.md  BRAND-BOOK.md  CDP-ARCHITECTURE.md  CUSTOMER-JOURNEY-OPS.md  CUSTOMER-JOURNEY.md  DEPLOY-CHECKLIST.md  DESIGN-STUDY.md  EVALUATION-POIMANDERS-2026-03-18.md  MODEL-CENSUS.md  OPS-DESIGN-GUIDELINES.md  PROJECT-REVIEW.md  SESSION-2025-02-25.md  TESTBOOK.md
controlla-me/music/: pyproject.toml
controlla-me/music/logs/: music.jsonl  music.jsonl.2026-03-22  music.jsonl.2026-03-23  music.jsonl.2026-03-24
controlla-me/music/src/: __init__.py  pipeline.py
controlla-me/music/src/agents/: __init__.py  __main__.py  arrangement_director.py  audio_analyst.py  base.py  career_advisor.py  quality_reviewer.py  release_strategist.py  stem_separator.py  trend_scout.py
controlla-me/music/src/config/: __init__.py  settings.py
controlla-me/music/src/market/: __init__.py
controlla-me/music/src/models/: __init__.py  audio.py  trends.py
controlla-me/music/src/utils/: __init__.py  db.py  logging.py  numpy_json.py
controlla-me/trading/: .gitignore  AVVIA_SCHEDULER.bat  INSTALLA_TASK_WINDOWS.bat  grid_search.py  pyproject.toml  report.py  run_backtest.py  scheduler_task.xml  test_strategy_tag.py
controlla-me/trading/exports/: backtest_summary.json
controlla-me/trading/reports/: ab_2factor_vs_3factor_2026-03-20.txt
controlla-me/trading/scripts/: ab_2factor_vs_3factor.py  backtest_5min_slope.py  export_backtest_summary.py  fetch_5min_data.py  fetch_spy_5min.py  grid_search_tpsl.py  migrate_to_sqlite.py
controlla-me/trading/src/: __init__.py  __main__.py  analysis.py  pipeline.py  scheduler.py
controlla-me/trading/src/agents/: __init__.py  base.py  executor.py  market_scanner.py  portfolio_monitor.py  risk_manager.py  signal_generator.py
controlla-me/trading/src/backtest/: __init__.py  __main__.py  auto_optimize.py  data_loader.py  engine.py  grid_search.py  metrics.py  report.py
controlla-me/trading/src/config/: __init__.py  settings.py
controlla-me/trading/src/connectors/: __init__.py  alpaca_client.py  tiingo_client.py  tiingo_news.py  tiingo_websocket.py
controlla-me/trading/src/db/: __init__.py  supabase_client.py
controlla-me/trading/src/models/: __init__.py  orders.py  portfolio.py  signals.py
controlla-me/trading/src/strategies/: __init__.py
controlla-me/trading/src/utils/: __init__.py  db.py  db_local.py  log_monitor.py  logging.py  telegram.py
controlla-me/trading/tests/: test_models.py
controlla-me/trading/tests/unit/: __init__.py  test_models.py  test_slope_and_trailing.py
docs/: ORGANIGRAMMA.md  PROJECT-STATUS-EVALUATION.md  PROMPT-ARCHITETTO-STRATEGIST.md  STUDIO-GUADAGNA-ME.md
gherardi-pro/: next.config.ts  package-lock.json  package.json
salva-me/: ARCHITECTURE.md  CLAUDE_CODE_BOOTSTRAP.md  LAUNCH.bat  LEGGIMI.md  SETUP.bat  agent_prompts.py
sandbox/: start.html
(+1642 files in other folders)
