[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "controlla-me-music"
version = "0.1.0"
description = "AI-powered music analysis and production tools for Controlla.me"
requires-python = ">=3.11"
license = {text = "Private"}

dependencies = [
    # Audio Source Separation
    "demucs>=4.0.0",
    "torch>=2.0.0",

    # Audio Analysis
    "librosa>=0.10.0",
    "essentia>=2.1b6",
    "madmom>=0.16.1",

    # Pitch Detection
    "crepe>=0.0.16",
    "basic-pitch>=0.3.0",

    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Database
    "supabase>=2.9.0",

    # Config & Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # HTTP Client
    "httpx>=0.27.0",

    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "T20"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
