[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poimandres-music"
version = "0.1.0"
description = "AI-powered music analysis and production tools for Poimandres"
requires-python = ">=3.11"
license = {text = "Private"}

dependencies = [
    # Audio Source Separation
    "demucs>=4.0.0",
    "torch>=2.0.0",

    # Audio Analysis
    "librosa>=0.10.0",
    "essentia>=2.1b6.dev1389",
    # --- Removed deps (Python 3.12 incompatible) and their replacements ---
    # madmom (beat tracking, downbeat detection):
    #   REMOVED — uses collections.MutableSequence, broken on Python 3.12+.
    #   REPLACEMENT: librosa.beat.beat_track() — already used in AudioAnalyst._detect_bpm().
    #   If higher accuracy needed: "BeatNet>=1.1.0" (PyTorch-based, Py3.12 compatible).
    # crepe (monophonic pitch tracking):
    #   REMOVED — requires old setuptools, not imported anywhere in codebase.
    #   REPLACEMENT: librosa.piptrack() — already used in AudioAnalyst._analyze_single_stem()
    #   for vocal pitch range estimation. If neural pitch tracking needed: "torchcrepe>=0.0.22"
    #   (PyTorch reimplementation, Py3.12 compatible, pip install torchcrepe).
    # basic-pitch (polyphonic pitch detection / MIDI transcription):
    #   REMOVED — requires tensorflow <2.16, unavailable on Python 3.12.
    #   REPLACEMENT: not currently needed (no MIDI transcription feature).
    #   If needed in future: "piano-transcription-inference>=0.0.5" (PyTorch-based)
    #   or Spotify basic-pitch v0.3+ when tf2.16+ support lands.

    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Database
    "supabase>=2.9.0",

    # Config & Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # HTTP Client
    "httpx>=0.27.0",

    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "T20"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
